(fix)frontend: make value and date visible kanban

--- a/frontend_app_kanban/src/component/KanbanCard.styl
+++ b/frontend_app_kanban/src/component/KanbanCard.styl
@@ -41,6 +41,12 @@ cardWidth = 280px
         &::after
           display none
 
+    &__options
+      font-weight bold
+      & .deadline
+          display flex
+          & i
+            margin-inline-end textSpacing
     &__description
       overflow-wrap break-word
       display flex
@@ -63,3 +69,5 @@ cardWidth = 280px
         font-weight bold
         margin-top textSpacing
         color mediumDarkGrey
+
+
